# slackctl

./: .gitignore  BUILD.bazel  LICENSE.md  README.md  WORKSPACE  channel.go  go.mod  go.sum  main.go  slackctl.go
.circleci/: config.yml
cmd/: BUILD.bazel  auth.go  auth_test.go  root.go  root_test.go  slackctl.go  users.go  users_test.go  version.go  version_test.go
