load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "root.go",
        "users.go",
    ],
    importpath = "github.com/ryosan-470/slackctl/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_nlopes_slack//:go_default_library",
        "@com_github_olekukonko_tablewriter//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["users_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
