load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "root.go",
        "users.go",
        "version.go",
    ],
    importpath = "github.com/ryosan-470/slackctl/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_nlopes_slack//:go_default_library",
        "@com_github_olekukonko_tablewriter//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
