load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "auth.go",
        "root.go",
        "users.go",
        "version.go",
    ],
    importpath = "github.com/ryosan-470/slackctl/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/nlopes/slack:go_default_library",
        "//vendor/github.com/olekukonko/tablewriter:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "auth_test.go",
        "root_test.go",
        "version_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/nlopes/slack:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)
